      versionedfile.  (Aaron Bentley)

    * Diffs generated using "diff -p" no longer break the patch parser.
      (Aaron Bentley)

    * get_transport treats an empty possible_transports list the same as a non-
      empty one.  (Aaron Bentley)

    * patch verification for merge directives is reactivated, and works with
      CRLF and CR files.  (Aaron Bentley)

  IMPROVEMENTS:

    * ``pull`` and ``merge`` are much faster at installing bundle format 4.
      (Aaron Bentley)

    * ``pull -v`` no longer includes deltas, making it much faster.
      (Aaron Bentley)

    * ``send`` now sends the directive as an attachment by default.
      (Aaron Bentley, Lukáš Lalinský, Alexander Belchenko)

    * Documentation updates (Martin Albisetti)

  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

   * ``Transport.should_cache`` has been removed.  It was not called in the
     previous release.  (Martin Pool)

   * NULL_REVISION is returned to indicate the null revision, not None.
     (Aaron Bentley)

  INTERNALS:

   * New trace function ``mutter_callsite`` will print out a subset of the
     stack to the log, which can be useful for gathering debug details.
     (Robert Collins)

    * ``bzrlib.pack.ContainerWriter`` now tracks how many records have been
      added via a public attribute records_written. (Robert Collins)

    * New method ``bzrlib.transport.Transport.get_recommended_page_size``.
      This provides a hint to users of transports as to the reasonable
      minimum data to read. In principle this can take latency and
      bandwidth into account on a per-connection basis, but for now it
      just has hard coded values based on the url. (e.g. http:// has a large
      page size, file:// has a small one.) (Robert Collins)

    * New method on ``bzrlib.transport.Transport`` ``open_write_stream`` allows